# ServerDemo

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README.md  buildconf  config.h.in  configure  configure.ac
.travis/: script.sh
client/: client.c  makefile
include/: def.h
server/: .gitignore  makefile  server.c  server.cpp
src/: Makefile.am  Makefile.in
src/client/: Makefile.am  Makefile.in  client  client.c
src/server/: Makefile.am  Makefile.in  server  server.c
tests/: Makefile.am  Makefile.in  test1.py
