
check_PROGRAMS                                  = \
    $(NULL)

check_SCRIPTS                                   = \
    test1.py                                      \
	$(NULL)

TESTS                                           = \
    $(check_PROGRAMS)                             \
	$(check_SCRIPTS)                              \
	$(NULL)

TEST_EXTENSIONS = .py

PY_LOG_COMPILER = $(PYTHON)
